Add submodule for module control

--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 [submodule "cyclefocus"]
 	path = cyclefocus
 	url = https://github.com/blueyed/awesome-cyclefocus
+[submodule "volume-control"]
+	path = volume-control
+	url = https://github.com/deficient/volume-control.git
